<resources>
    <string name="app_name">Amishav</string>
    <string name="screen_name">Math Exercises</string>
    <string name="multi_board">לוח הכפל</string>
    <string name="multi_to_20">כפל עד 20</string>
    <string name="challenge">אתגר</string>
    <string name="multi_sign">X</string>
    <string name="answer">תשובה</string>
    <string name="check">בדיקה</string>
    <string name="first_num"> </string>
    <string name="second_num"> </string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="base_greeting">Hello,</string>
    <string name="rate">0</string>
    <string name="rate_text">rate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="profile_picture">profile picture</string>
    <string name="change_picture">change picture</string>
    <string name="add_user">Add User</string>
</resources>